--- a/src/com/opk/pos/view/DashBoardForm.fxml
+++ b/src/com/opk/pos/view/DashBoardForm.fxml
@@ -1,14 +1,88 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import java.util.*?>
-<?import javafx.scene.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<?import com.jfoenix.controls.JFXButton?>
+<?import javafx.scene.Cursor?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.Separator?>
+<?import javafx.scene.effect.Shadow?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.text.Font?>
 
-<AnchorPane xmlns="http://javafx.com/javafx"
-            xmlns:fx="http://javafx.com/fxml"
-            fx:controller="com.opk.pos.controller.DashBoardFormController"
-            prefHeight="400.0" prefWidth="600.0">
 
+<AnchorPane prefHeight="526.0" prefWidth="837.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.opk.pos.controller.DashBoardFormController">
+   <children>
+      <Label layoutX="31.0" layoutY="30.0" text="EasyPOS">
+         <font>
+            <Font name="System Bold" size="20.0" />
+         </font>
+      </Label>
+      <Separator layoutX="124.0" layoutY="45.0" prefHeight="3.0" prefWidth="200.0" />
+      <JFXButton buttonType="RAISED" layoutX="755.0" layoutY="33.0" style="-fx-background-color: #16a085;" text="Logout" textFill="WHITE">
+         <font>
+            <Font name="System Bold" size="13.0" />
+         </font>
+      </JFXButton>
+      <Label layoutX="341.0" layoutY="28.0" text="2022-11-11" textFill="#03009a">
+         <font>
+            <Font name="System Bold" size="18.0" />
+         </font>
+      </Label>
+      <Label layoutX="471.0" layoutY="28.0" text="10:20:15" textFill="#03009a">
+         <font>
+            <Font name="System Bold" size="18.0" />
+         </font>
+      </Label>
+      <Separator layoutX="450.0" layoutY="28.0" orientation="VERTICAL" prefHeight="30.0" prefWidth="0.0" />
+      <Separator layoutX="562.0" layoutY="45.0" prefHeight="3.0" prefWidth="175.0" />
+      <AnchorPane layoutX="41.0" layoutY="87.0" prefHeight="200.0" prefWidth="200.0" style="-fx-background-color: white; -fx-border-radius: 100%; -fx-background-radius: 100;">
+         <effect>
+            <Shadow color="#2c3e50" height="12.73" radius="4.165" width="5.93" />
+         </effect>
+      </AnchorPane>
+      <AnchorPane layoutX="40.0" layoutY="83.0" prefHeight="200.0" prefWidth="200.0" style="-fx-background-color: #ecf0f1; -fx-background-radius: 100;">
+         <cursor>
+            <Cursor fx:constant="HAND" />
+         </cursor>
+      </AnchorPane>
+      <AnchorPane layoutX="319.0" layoutY="89.0" prefHeight="200.0" prefWidth="200.0" style="-fx-background-color: white; -fx-border-radius: 100%; -fx-background-radius: 100;">
+         <effect>
+            <Shadow color="#2c3e50" height="12.73" radius="4.165" width="5.93" />
+         </effect>
+      </AnchorPane>
+      <AnchorPane layoutX="318.0" layoutY="85.0" prefHeight="200.0" prefWidth="200.0" style="-fx-background-color: #ecf0f1; -fx-background-radius: 100;">
+         <cursor>
+            <Cursor fx:constant="HAND" />
+         </cursor>
+      </AnchorPane>
+      <AnchorPane layoutX="588.0" layoutY="91.0" prefHeight="200.0" prefWidth="200.0" style="-fx-background-color: white; -fx-border-radius: 100%; -fx-background-radius: 100;">
+         <effect>
+            <Shadow color="#2c3e50" height="12.73" radius="4.165" width="5.93" />
+         </effect>
+      </AnchorPane>
+      <AnchorPane layoutX="587.0" layoutY="87.0" prefHeight="200.0" prefWidth="200.0" style="-fx-background-color: #ecf0f1; -fx-background-radius: 100;">
+         <cursor>
+            <Cursor fx:constant="HAND" />
+         </cursor>
+      </AnchorPane>
+      <AnchorPane layoutX="152.0" layoutY="304.0" prefHeight="200.0" prefWidth="200.0" style="-fx-background-color: white; -fx-border-radius: 100%; -fx-background-radius: 100;">
+         <effect>
+            <Shadow color="#2c3e50" height="12.73" radius="4.165" width="5.93" />
+         </effect>
+      </AnchorPane>
+      <AnchorPane layoutX="151.0" layoutY="300.0" prefHeight="200.0" prefWidth="200.0" style="-fx-background-color: #ecf0f1; -fx-background-radius: 100;">
+         <cursor>
+            <Cursor fx:constant="HAND" />
+         </cursor>
+      </AnchorPane>
+      <AnchorPane layoutX="444.0" layoutY="302.0" prefHeight="200.0" prefWidth="200.0" style="-fx-background-color: white; -fx-border-radius: 100%; -fx-background-radius: 100;">
+         <effect>
+            <Shadow color="#2c3e50" height="12.73" radius="4.165" width="5.93" />
+         </effect>
+      </AnchorPane>
+      <AnchorPane layoutX="443.0" layoutY="298.0" prefHeight="200.0" prefWidth="200.0" style="-fx-background-color: #ecf0f1; -fx-background-radius: 100;">
+         <cursor>
+            <Cursor fx:constant="HAND" />
+         </cursor>
+      </AnchorPane>
+   </children>
 </AnchorPane>
