--- a/src/com/opk/pos/view/CustomerForm.fxml
+++ b/src/com/opk/pos/view/CustomerForm.fxml
@@ -1,14 +1,81 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import java.util.*?>
-<?import javafx.scene.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<?import com.jfoenix.controls.JFXButton?>
+<?import javafx.scene.Cursor?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.Separator?>
+<?import javafx.scene.control.TableColumn?>
+<?import javafx.scene.control.TableView?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.text.Font?>
 
-<AnchorPane xmlns="http://javafx.com/javafx"
-            xmlns:fx="http://javafx.com/fxml"
-            fx:controller="com.opk.pos.controller.CustomerFormController"
-            prefHeight="400.0" prefWidth="600.0">
 
+<AnchorPane prefHeight="491.0" prefWidth="784.0" style="-fx-background-color: white;" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.opk.pos.controller.CustomerFormController">
+   <children>
+      <JFXButton buttonType="RAISED" layoutX="14.0" layoutY="14.0" style="-fx-background-color: #27ae60;" text="Back to home" textFill="WHITE">
+         <font>
+            <Font name="System Bold" size="13.0" />
+         </font>
+         <cursor>
+            <Cursor fx:constant="HAND" />
+         </cursor>
+      </JFXButton>
+      <JFXButton buttonType="RAISED" layoutX="649.0" layoutY="14.0" style="-fx-background-color: #34495e;" text="+ New Customer" textFill="WHITE">
+         <font>
+            <Font name="System Bold" size="13.0" />
+         </font>
+         <cursor>
+            <Cursor fx:constant="HAND" />
+         </cursor>
+      </JFXButton>
+      <Label layoutX="131.0" layoutY="20.0" text="Customer management" textFill="#7c0000">
+         <font>
+            <Font name="System Bold" size="15.0" />
+         </font>
+      </Label>
+      <Separator layoutX="310.0" layoutY="29.0" prefHeight="3.0" prefWidth="325.0" />
+      <TextField layoutX="14.0" layoutY="72.0" prefHeight="29.0" prefWidth="121.0" promptText="Customer Id">
+         <font>
+            <Font name="System Bold" size="13.0" />
+         </font>
+      </TextField>
+      <TextField layoutX="152.0" layoutY="72.0" promptText="Name">
+         <font>
+            <Font name="System Bold" size="13.0" />
+         </font>
+      </TextField>
+      <TextField layoutX="344.0" layoutY="72.0" prefHeight="29.0" prefWidth="263.0" promptText="Address">
+         <font>
+            <Font name="System Bold" size="13.0" />
+         </font>
+      </TextField>
+      <TextField layoutX="624.0" layoutY="72.0" prefHeight="29.0" prefWidth="141.0" promptText="Customer Salary">
+         <font>
+            <Font name="System Bold" size="13.0" />
+         </font>
+      </TextField>
+      <TextField layoutX="14.0" layoutY="117.0" prefHeight="29.0" prefWidth="402.0" promptText="Search here">
+         <font>
+            <Font name="System Bold" size="13.0" />
+         </font>
+      </TextField>
+      <JFXButton buttonType="RAISED" layoutX="629.0" layoutY="117.0" prefHeight="29.0" prefWidth="141.0" style="-fx-background-color: #2980b9;" text="Save Customer" textFill="WHITE">
+         <font>
+            <Font name="System Bold" size="13.0" />
+         </font>
+         <cursor>
+            <Cursor fx:constant="HAND" />
+         </cursor>
+      </JFXButton>
+      <TableView layoutX="16.0" layoutY="162.0" prefHeight="319.0" prefWidth="756.0">
+        <columns>
+          <TableColumn prefWidth="75.0" text="Customer Id" />
+          <TableColumn prefWidth="161.0" text="Name" />
+            <TableColumn prefWidth="235.0" text="Address" />
+            <TableColumn prefWidth="139.0" text="Salary" />
+            <TableColumn prefWidth="138.0" text="Option" />
+        </columns>
+      </TableView>
+   </children>
 </AnchorPane>
