--- a/src/com/opk/pos/view/CustomerForm.fxml
+++ b/src/com/opk/pos/view/CustomerForm.fxml
@@ -11,9 +11,9 @@
 <?import javafx.scene.text.Font?>
 
 
-<AnchorPane prefHeight="491.0" prefWidth="784.0" style="-fx-background-color: white;" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.opk.pos.controller.CustomerFormController">
+<AnchorPane fx:id="customerFormContext" prefHeight="491.0" prefWidth="784.0" style="-fx-background-color: white;" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.opk.pos.controller.CustomerFormController">
    <children>
-      <JFXButton buttonType="RAISED" layoutX="14.0" layoutY="14.0" style="-fx-background-color: #27ae60;" text="Back to home" textFill="WHITE">
+      <JFXButton buttonType="RAISED" layoutX="14.0" layoutY="14.0" onAction="#backToHomeOnAction" style="-fx-background-color: #27ae60;" text="Back to home" textFill="WHITE">
          <font>
             <Font name="System Bold" size="13.0" />
          </font>
@@ -35,22 +35,22 @@
          </font>
       </Label>
       <Separator layoutX="310.0" layoutY="29.0" prefHeight="3.0" prefWidth="325.0" />
-      <TextField layoutX="14.0" layoutY="72.0" prefHeight="29.0" prefWidth="121.0" promptText="Customer Id">
+      <TextField fx:id="txtId" layoutX="14.0" layoutY="72.0" prefHeight="29.0" prefWidth="121.0" promptText="Customer Id">
          <font>
             <Font name="System Bold" size="13.0" />
          </font>
       </TextField>
-      <TextField layoutX="152.0" layoutY="72.0" promptText="Name">
+      <TextField fx:id="txtName" layoutX="152.0" layoutY="72.0" promptText="Name">
          <font>
             <Font name="System Bold" size="13.0" />
          </font>
       </TextField>
-      <TextField layoutX="344.0" layoutY="72.0" prefHeight="29.0" prefWidth="263.0" promptText="Address">
+      <TextField fx:id="txtAddress" layoutX="344.0" layoutY="72.0" prefHeight="29.0" prefWidth="263.0" promptText="Address">
          <font>
             <Font name="System Bold" size="13.0" />
          </font>
       </TextField>
-      <TextField layoutX="624.0" layoutY="72.0" prefHeight="29.0" prefWidth="141.0" promptText="Customer Salary">
+      <TextField fx:id="txtSalary" layoutX="624.0" layoutY="72.0" prefHeight="29.0" prefWidth="141.0" promptText="Customer Salary">
          <font>
             <Font name="System Bold" size="13.0" />
          </font>
@@ -60,7 +60,7 @@
             <Font name="System Bold" size="13.0" />
          </font>
       </TextField>
-      <JFXButton buttonType="RAISED" layoutX="629.0" layoutY="117.0" prefHeight="29.0" prefWidth="141.0" style="-fx-background-color: #2980b9;" text="Save Customer" textFill="WHITE">
+      <JFXButton buttonType="RAISED" layoutX="629.0" layoutY="117.0" onAction="#saveUpdateOnAction" prefHeight="29.0" prefWidth="141.0" style="-fx-background-color: #2980b9;" text="Save Customer" textFill="WHITE">
          <font>
             <Font name="System Bold" size="13.0" />
          </font>
