load Customers and Items data to combo boxes

--- a/src/com/opk/pos/view/PlaceOrderForm.fxml
+++ b/src/com/opk/pos/view/PlaceOrderForm.fxml
@@ -11,7 +11,7 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="512.0" prefWidth="789.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.opk.pos.controller.PlaceOrderFormController">
+<AnchorPane fx:id="placeOrderContext" prefHeight="512.0" prefWidth="789.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.opk.pos.controller.PlaceOrderFormController">
    <children>
       <JFXButton buttonType="RAISED" layoutX="24.0" layoutY="34.0" onAction="#backToHomeOnAction" style="-fx-background-color: #27ae60;" text="Back to home" textFill="WHITE">
          <font>
@@ -32,7 +32,7 @@
       <TextField layoutX="385.0" layoutY="90.0" promptText="Total Cost" />
       <TextField layoutX="545.0" layoutY="90.0" promptText="Item Count" />
       <Separator layoutX="159.0" layoutY="128.0" prefHeight="0.0" prefWidth="481.0" />
-      <ComboBox layoutX="24.0" layoutY="140.0" prefWidth="150.0" promptText="Customer" />
+      <ComboBox fx:id="cmbCustomerCodes" layoutX="24.0" layoutY="140.0" prefWidth="150.0" promptText="Customer" />
       <TextField layoutX="235.0" layoutY="140.0" promptText="Name" />
       <TextField layoutX="395.0" layoutY="140.0" prefHeight="25.0" prefWidth="169.0" promptText="Address" />
       <TextField layoutX="575.0" layoutY="140.0" promptText="Salary" />
@@ -44,7 +44,7 @@
             <Cursor fx:constant="HAND" />
          </cursor>
       </JFXButton>
-      <ComboBox layoutX="24.0" layoutY="185.0" prefWidth="150.0" promptText="Item" />
+      <ComboBox fx:id="cmbItemCodes" layoutX="24.0" layoutY="185.0" prefWidth="150.0" promptText="Item" />
       <TextField layoutX="195.0" layoutY="185.0" prefHeight="25.0" prefWidth="220.0" promptText="Description" />
       <TextField layoutX="425.0" layoutY="185.0" prefHeight="25.0" prefWidth="118.0" promptText="Unit Price" />
       <TextField layoutX="555.0" layoutY="185.0" prefHeight="25.0" prefWidth="118.0" promptText=" QTY On Hand" />
