add listeners for Customer and Item comboboxes

--- a/src/com/opk/pos/view/PlaceOrderForm.fxml
+++ b/src/com/opk/pos/view/PlaceOrderForm.fxml
@@ -27,15 +27,15 @@
          </font>
       </Label>
       <Separator layoutX="259.0" layoutY="48.0" prefHeight="0.0" prefWidth="481.0" />
-      <TextField layoutX="65.0" layoutY="90.0" promptText="Order Id" />
-      <TextField layoutX="225.0" layoutY="90.0" promptText="Date" />
-      <TextField layoutX="385.0" layoutY="90.0" promptText="Total Cost" />
-      <TextField layoutX="545.0" layoutY="90.0" promptText="Item Count" />
+      <TextField disable="true" editable="false" layoutX="65.0" layoutY="90.0" promptText="Order Id" />
+      <TextField disable="true" editable="false" layoutX="225.0" layoutY="90.0" promptText="Date" />
+      <TextField disable="true" editable="false" layoutX="385.0" layoutY="90.0" promptText="Total Cost" />
+      <TextField disable="true" editable="false" layoutX="545.0" layoutY="90.0" promptText="Item Count" />
       <Separator layoutX="159.0" layoutY="128.0" prefHeight="0.0" prefWidth="481.0" />
       <ComboBox fx:id="cmbCustomerCodes" layoutX="24.0" layoutY="140.0" prefWidth="150.0" promptText="Customer" />
-      <TextField layoutX="235.0" layoutY="140.0" promptText="Name" />
-      <TextField layoutX="395.0" layoutY="140.0" prefHeight="25.0" prefWidth="169.0" promptText="Address" />
-      <TextField layoutX="575.0" layoutY="140.0" promptText="Salary" />
+      <TextField fx:id="txtName" layoutX="235.0" layoutY="140.0" promptText="Name" />
+      <TextField fx:id="txtAddress" layoutX="395.0" layoutY="140.0" prefHeight="25.0" prefWidth="169.0" promptText="Address" />
+      <TextField fx:id="txtSalary" layoutX="575.0" layoutY="140.0" promptText="Salary" />
       <JFXButton buttonType="RAISED" layoutX="743.0" layoutY="138.0" onAction="#backToHomeOnAction" style="-fx-background-color: #27ae60;" text="+" textFill="WHITE">
          <font>
             <Font name="System Bold" size="13.0" />
@@ -45,9 +45,9 @@
          </cursor>
       </JFXButton>
       <ComboBox fx:id="cmbItemCodes" layoutX="24.0" layoutY="185.0" prefWidth="150.0" promptText="Item" />
-      <TextField layoutX="195.0" layoutY="185.0" prefHeight="25.0" prefWidth="220.0" promptText="Description" />
-      <TextField layoutX="425.0" layoutY="185.0" prefHeight="25.0" prefWidth="118.0" promptText="Unit Price" />
-      <TextField layoutX="555.0" layoutY="185.0" prefHeight="25.0" prefWidth="118.0" promptText=" QTY On Hand" />
+      <TextField fx:id="txtDescription" layoutX="195.0" layoutY="185.0" prefHeight="25.0" prefWidth="220.0" promptText="Description" />
+      <TextField fx:id="txtUnitPrice" layoutX="425.0" layoutY="185.0" prefHeight="25.0" prefWidth="118.0" promptText="Unit Price" />
+      <TextField fx:id="txtQtyOnHand" layoutX="555.0" layoutY="185.0" prefHeight="25.0" prefWidth="118.0" promptText=" QTY On Hand" />
       <TextField layoutX="681.0" layoutY="185.0" prefHeight="25.0" prefWidth="91.0" promptText="QTY" />
       <JFXButton buttonType="RAISED" layoutX="682.0" layoutY="217.0" onAction="#backToHomeOnAction" style="-fx-background-color: #34495e;" text="Add to Cart" textFill="WHITE">
          <font>
