--- a/src/com/opk/pos/view/PlaceOrderForm.fxml
+++ b/src/com/opk/pos/view/PlaceOrderForm.fxml
@@ -27,10 +27,10 @@
          </font>
       </Label>
       <Separator layoutX="259.0" layoutY="48.0" prefHeight="0.0" prefWidth="481.0" />
-      <TextField disable="true" editable="false" layoutX="65.0" layoutY="90.0" promptText="Order Id" />
-      <TextField disable="true" editable="false" layoutX="225.0" layoutY="90.0" promptText="Date" />
-      <TextField disable="true" editable="false" layoutX="385.0" layoutY="90.0" promptText="Total Cost" />
-      <TextField disable="true" editable="false" layoutX="545.0" layoutY="90.0" promptText="Item Count" />
+      <TextField fx:id="txtOrderId" disable="true" editable="false" layoutX="65.0" layoutY="90.0" promptText="Order Id" />
+      <TextField fx:id="txtOrderDate" disable="true" editable="false" layoutX="225.0" layoutY="90.0" promptText="Date" />
+      <TextField fx:id="txtOrderTotal" disable="true" editable="false" layoutX="385.0" layoutY="90.0" promptText="Total Cost" />
+      <TextField fx:id="txtItemCount" disable="true" editable="false" layoutX="545.0" layoutY="90.0" promptText="Item Count" />
       <Separator layoutX="159.0" layoutY="128.0" prefHeight="0.0" prefWidth="481.0" />
       <ComboBox fx:id="cmbCustomerCodes" layoutX="24.0" layoutY="140.0" prefWidth="150.0" promptText="Customer" />
       <TextField fx:id="txtName" layoutX="235.0" layoutY="140.0" promptText="Name" />
@@ -48,8 +48,8 @@
       <TextField fx:id="txtDescription" layoutX="195.0" layoutY="185.0" prefHeight="25.0" prefWidth="220.0" promptText="Description" />
       <TextField fx:id="txtUnitPrice" layoutX="425.0" layoutY="185.0" prefHeight="25.0" prefWidth="118.0" promptText="Unit Price" />
       <TextField fx:id="txtQtyOnHand" layoutX="555.0" layoutY="185.0" prefHeight="25.0" prefWidth="118.0" promptText=" QTY On Hand" />
-      <TextField layoutX="681.0" layoutY="185.0" prefHeight="25.0" prefWidth="91.0" promptText="QTY" />
-      <JFXButton buttonType="RAISED" layoutX="682.0" layoutY="217.0" onAction="#backToHomeOnAction" style="-fx-background-color: #34495e;" text="Add to Cart" textFill="WHITE">
+      <TextField fx:id="txtQty" layoutX="681.0" layoutY="185.0" prefHeight="25.0" prefWidth="91.0" promptText="QTY" />
+      <JFXButton buttonType="RAISED" layoutX="682.0" layoutY="217.0" onAction="#addToCart" style="-fx-background-color: #34495e;" text="Add to Cart" textFill="WHITE">
          <font>
             <Font name="System Bold" size="13.0" />
          </font>
@@ -57,14 +57,14 @@
             <Cursor fx:constant="HAND" />
          </cursor>
       </JFXButton>
-      <TableView layoutX="23.0" layoutY="255.0" prefHeight="196.0" prefWidth="748.0">
+      <TableView fx:id="tblCart" layoutX="23.0" layoutY="255.0" prefHeight="196.0" prefWidth="748.0">
         <columns>
-          <TableColumn prefWidth="75.0" text="Code" />
-          <TableColumn prefWidth="159.0" text="Description" />
-            <TableColumn prefWidth="126.0" text="Unit price" />
-            <TableColumn prefWidth="119.0" text="QTY" />
-            <TableColumn prefWidth="130.0" text="Total" />
-            <TableColumn prefWidth="131.0" text="Option" />
+          <TableColumn fx:id="colCode" prefWidth="75.0" text="Code" />
+          <TableColumn fx:id="colDesc" prefWidth="159.0" text="Description" />
+            <TableColumn fx:id="colUnitPrice" prefWidth="126.0" text="Unit price" />
+            <TableColumn fx:id="colQty" prefWidth="119.0" text="QTY" />
+            <TableColumn fx:id="colTotal" prefWidth="130.0" text="Total" />
+            <TableColumn fx:id="colOption" prefWidth="131.0" text="Option" />
         </columns>
       </TableView>
       <JFXButton buttonType="RAISED" layoutX="21.0" layoutY="467.0" onAction="#backToHomeOnAction" prefHeight="29.0" prefWidth="748.0" style="-fx-background-color: #2980b9;" text="Place Order" textFill="WHITE">
