set total and count

--- a/src/com/opk/pos/view/PlaceOrderForm.fxml
+++ b/src/com/opk/pos/view/PlaceOrderForm.fxml
@@ -29,7 +29,7 @@
       <Separator layoutX="259.0" layoutY="48.0" prefHeight="0.0" prefWidth="481.0" />
       <TextField fx:id="txtOrderId" disable="true" editable="false" layoutX="65.0" layoutY="90.0" promptText="Order Id" />
       <TextField fx:id="txtOrderDate" disable="true" editable="false" layoutX="225.0" layoutY="90.0" promptText="Date" />
-      <TextField fx:id="txtOrderTotal" disable="true" editable="false" layoutX="385.0" layoutY="90.0" promptText="Total Cost" />
+      <TextField fx:id="txtOrderTotal" disable="true" editable="false" layoutX="385.0" layoutY="90.0" promptText="Total Cost" text="0" />
       <TextField fx:id="txtItemCount" disable="true" editable="false" layoutX="545.0" layoutY="90.0" promptText="Item Count" />
       <Separator layoutX="159.0" layoutY="128.0" prefHeight="0.0" prefWidth="481.0" />
       <ComboBox fx:id="cmbCustomerCodes" layoutX="24.0" layoutY="140.0" prefWidth="150.0" promptText="Customer" />
