--- a/src/com/opk/pos/view/PlaceOrderForm.fxml
+++ b/src/com/opk/pos/view/PlaceOrderForm.fxml
@@ -48,8 +48,8 @@
       <TextField fx:id="txtDescription" layoutX="195.0" layoutY="185.0" prefHeight="25.0" prefWidth="220.0" promptText="Description" />
       <TextField fx:id="txtUnitPrice" layoutX="425.0" layoutY="185.0" prefHeight="25.0" prefWidth="118.0" promptText="Unit Price" />
       <TextField fx:id="txtQtyOnHand" layoutX="555.0" layoutY="185.0" prefHeight="25.0" prefWidth="118.0" promptText=" QTY On Hand" />
-      <TextField fx:id="txtQty" layoutX="681.0" layoutY="185.0" prefHeight="25.0" prefWidth="91.0" promptText="QTY" />
-      <JFXButton buttonType="RAISED" layoutX="682.0" layoutY="217.0" onAction="#addToCart" style="-fx-background-color: #34495e;" text="Add to Cart" textFill="WHITE">
+      <TextField fx:id="txtQty" layoutX="681.0" layoutY="185.0" onAction="#addToCartData" prefHeight="25.0" prefWidth="91.0" promptText="QTY" />
+      <JFXButton fx:id="addToCartButton" buttonType="RAISED" layoutX="682.0" layoutY="217.0" onAction="#addToCart" style="-fx-background-color: #34495e;" text="Add to Cart" textFill="WHITE">
          <font>
             <Font name="System Bold" size="13.0" />
          </font>
